--- a/notebooks/02_get_iso_data.ipynb
+++ b/notebooks/02_get_iso_data.ipynb
@@ -1,37 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data for this project comes directly from the New York State Independent Service Authority (NYISO), which acts as a broker for the state's energy market. They store all their historical load data (on a region-wide basis) as csvs on an FTP server. \n",
+    "\n",
+    "You can read more here: http://www.nyiso.com/public/markets_operations/market_data/load_data/index.jsp\n",
+    "\n",
+    "Data was downloaded directly from here: `http://mis.nyiso.com/public/P-58Blist.htm`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Electricity in New York State is generated in 12 'zones', which ahve their own separate markets. See the image below for reference. In this data, the load is split out by zones, as in the 'name' column\n",
+    "\n",
+    "<img src='https://business.directenergy.com/~/media/deb/images/callouts/map.ashx?la=en&h=500'>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/dyawitz/anaconda/envs/py27/bin/python\n"
+      "/Users/dyawitz/anaconda2/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
      ]
     }
    ],
-   "source": [
-    "import sys\n",
-    "print sys.executable\n",
-    "\n",
-    "paths = ['', '/Users/dyawitz/anaconda/bin', '/Users/dyawitz/anaconda/lib/python27.zip', '/Users/dyawitz/anaconda/lib/python2.7/plat-darwin', '/Users/dyawitz/anaconda/lib/python2.7/plat-mac', '/Users/dyawitz/anaconda/lib/python2.7/plat-mac/lib-scriptpackages', '/Users/dyawitz/anaconda/lib/python2.7/lib-tk', '/Users/dyawitz/anaconda/lib/python2.7/lib-old', '/Users/dyawitz/anaconda/lib/python2.7/lib-dynload', '/Users/dyawitz/anaconda/lib/python2.7/site-packages/Sphinx-1.3.1-py2.7.egg', '/Users/dyawitz/anaconda/lib/python2.7/site-packages/setuptools-18.5-py2.7.egg', '/Users/dyawitz/anaconda/lib/python2.7/site-packages', '/Users/dyawitz/anaconda/lib/python2.7/site-packages/aeosa', '/Users/dyawitz/anaconda/lib/python2.7/site-packages/IPython/extensions', '/Users/dyawitz/.ipython']\n",
-    "\n",
-    "for i in paths:\n",
-    "   sys.path.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": [
     "import zipfile\n",
     "import os\n",
@@ -39,51 +43,25 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
-    "import urllib\n"
+    "import urllib\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Data from the NYS ISO.\n",
-    "\n",
-    "See: http://www.nyiso.com/public/markets_operations/market_data/load_data/index.jsp\n",
-    "\n",
-    "Directly from `http://mis.nyiso.com/public/P-58Blist.htm`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "dates = pd.date_range(pd.to_datetime('2001-01-01'), \\\n",
-    "                       pd.to_datetime('2015-12-31'), freq='M')\n"
+    "## Downloading the data\n",
+    "Let's start by pulling all the data for the state for 2001-2015.\n",
+    "\n",
+    "The files will come in as zip files, which will go in the `../data/nyiso` folder. \n",
+    "\n",
+    "Then, I'll extract every csv into the `../data/nyiso/all/raw` folder"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'20111201pal_csv'"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -94,44 +72,16 @@
    },
    "outputs": [],
    "source": [
+    "dates = pd.date_range(pd.to_datetime('2001-01-01'), \\\n",
+    "                       pd.to_datetime('2015-12-31'), freq='M')\n",
+    "\n",
     "for date in dates:\n",
     "    url = 'http://mis.nyiso.com/public/csv/pal/{0}{1}01pal_csv.zip'.format(date.year, str(date.month).zfill(2))\n",
-    "    urllib.urlretrieve(url, \"../data/nyiso/{0}\".format(url.split('/')[-1]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Download all your zip files to the `../data/nyiso` folder. \n",
+    "    urllib.urlretrieve(url, \"../data/nyiso/{0}\".format(url.split('/')[-1]))\n",
     "\n",
-    "Then, extract every csv into the `../data/nyiso/all/raw` folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "def unzip(source_filename, dest_dir):\n",
     "    with zipfile.ZipFile(source_filename) as zf:\n",
     "        zf.extractall(dest_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np"
    ]
   },
   {
@@ -145,17 +95,7 @@
     "zips = []\n",
     "for file in os.listdir(\"../data/nyiso\"):\n",
     "    if file.endswith(\".zip\"):\n",
-    "        zips.append(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "        zips.append(file)\n",
     "for z in zips:\n",
     "    unzip('../data/nyiso/' + z, '../data/nyiso/all/raw')"
    ]
@@ -205,6 +145,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning and viewing the data\n",
+    "\n",
+    "Let's load 14 years of data into a pandas dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {
@@ -216,14 +165,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "cols = df.columns"
+    "Then, clean out any headers that may be in the data and just take the four columns we're interested in: timestamp, region name, id, and load (where load is electricity demand, in Megawatts). "
    ]
   },
   {
@@ -234,19 +179,18 @@
    },
    "outputs": [],
    "source": [
-    "df.columns = [col.lower().replace(' ', '') for col in cols]"
+    "cols = df.columns\n",
+    "df.columns = [col.lower().replace(' ', '') for col in cols]\n",
+    "df = df[['timestamp', 'name', 'ptid', 'load']][df.load != 'Load']"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "#clean out any headers that may be in the data and take the subset of these 4 columns\n",
-    "df = df[['timestamp', 'name', 'ptid', 'load']][df.load != 'Load']"
+    "Rewrite this data to the csv for later"
    ]
   },
   {
@@ -284,14 +228,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "df = pd.read_csv('../data/nyiso/all/combined.csv')"
+    "## Create a dictionary of weather stations\n",
+    "\n",
+    "We'll need this for later. Now that I have the names of each region as they're represented by the ISO, I took each and looked up the corresponding city and weather station. I put these into a dictionary and pickled it to call in the `03_get_weather_data` notebook."
    ]
   },
   {
@@ -307,17 +249,6 @@
     "region_names = ['Capital', 'Central', 'Dunwoodie', 'Genese', 'Hudson Valley', 'Long Island', 'Mohawk Valley', 'Millwood', 'NYC', 'North', 'West']\n",
     "cities = ['Albany', 'Syracuse', 'Yonkers', 'Rochester', 'Poughkeepsie', 'NYC', 'Utica', 'Yonkers', 'NYC', 'Plattsburgh', 'Buffalo']\n",
     "weather_stations = ['kalb', 'ksyr', 'klga', 'kroc', 'kpou', 'kjfk', 'krme', 'klga', 'kjfk', 'kpbg', 'kbuf']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "weather_dict = dict(zip(regions, zip(weather_stations, region_names, cities)))"
    ]
   },
   {
@@ -349,6 +280,7 @@
     }
    ],
    "source": [
+    "weather_dict = dict(zip(regions, zip(weather_stations, region_names, cities)))\n",
     "weather_dict"
    ]
   },
@@ -376,71 +308,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'capital'"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "weather_dict['CAPITL'][1].lower()"
+    "## Subset the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['CAPITL',\n",
-       " 'CENTRL',\n",
-       " 'DUNWOD',\n",
-       " 'GENESE',\n",
-       " 'HUD VL',\n",
-       " 'LONGIL',\n",
-       " 'MHK VL',\n",
-       " 'MILLWD',\n",
-       " 'N.Y.C.',\n",
-       " 'NORTH',\n",
-       " 'WEST']"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted(weather_dict.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "region = 'DUNWOD'\n",
-    "subset = df[df.name == region].copy()\n",
-    "filename = weather_dict[region][1].lower().replace(' ', '') + '.csv'\n",
-    "subset.to_csv('../data/nyiso/all/' + filename)"
+    "Take an subset of the data for each zone. A smaller spaital resoluiton will make tying in weather data more accurate.\n",
+    "\n",
+    "Plus, it makes the file easier to work with one at a time for testing."
    ]
   },
   {
@@ -455,125 +339,6 @@
     "    subset = df[df.name == region].copy()\n",
     "    filename = weather_dict[region][1].lower().replace(' ', '') + '.csv'\n",
     "    subset.to_csv('../data/nyiso/all/' + filename, index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Take an extract of the data for the \"CAPITL\" region only. This is the area around Albany. A smaller spaital resoluiton will make tying in weather data more accurate.\n",
-    "\n",
-    "Plus, it makes the file easier to work with. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "capital = df[df.name == 'CAPITL']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1691882"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(capital)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "capital.to_csv('../data/nyiso/all/capital_region.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "capital = pd.read_csv('../data/nyiso/all/capital_region.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "capital.timestamp = capital.timestamp.apply(lambda x: pd.to_datetime(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2013"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "capital.timestamp.year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.float64"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(capital.load[440823])"
    ]
   },
   {
@@ -652,7 +417,7 @@
     }
    ],
    "source": [
-    "capital.head()"
+    "#Here's what one of those would look like:"
    ]
   },
   {
@@ -664,23 +429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "capital[capital.timestamp < pd.to_datetime('2013-01-01')].to_csv('load2012.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "capital[capital.timestamp < pd.to_datetime('2013-01-01')].to_csv('load2012.csv', index=False)\n",
     "csvs = []\n",
     "for file in os.listdir(\"../data/wunderground/kalb\"):\n",
     "    if file.startswith(\"2012\"):\n",
@@ -707,8 +462,8 @@
     "collapsed": true
    },
    "source": [
-    "# Download historical forecasts\n",
-    "Use these to compare our forecasts to the NYISO\n",
+    "## Download historical forecasts\n",
+    "The NYISO publishes a \"day-ahead\" forecast. One of the goals of this project is to see if I can outperform that. So I'll download their archived day-ahead forecast for 2014-206\n",
     "\n",
     "Use the day-ahead forecasts from the NYISO website: http://www.nyiso.com/public/markets_operations/market_data/custom_report/index.jsp?report=load_forecast"
    ]
@@ -754,7 +509,16 @@
    },
    "outputs": [],
    "source": [
-    "nyiso_forecast.columns = ['timestamp', 'zone', 'forecast', 'gmt']\n"
+    "nyiso_forecast.columns = ['timestamp', 'zone', 'forecast', 'gmt']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scrap notes (feel free to ignore)\n",
+    "\n",
+    "These are a few manual things I tried to compare my model to the forecast for Albany. Consider these cells still under development :)"
    ]
   },
   {
@@ -765,40 +529,17 @@
    },
    "outputs": [],
    "source": [
-    "capital_forecast = nyiso_forecast[nyiso_forecast.zone == 'CAPITL']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "capital_forecast.reset_index(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "capital_forecast = capital_forecast[['timestamp', 'zone', 'forecast']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "capital_forecast = nyiso_forecast[nyiso_forecast.zone == 'CAPITL']\n",
+    "capital_forecast.reset_index(inplace=True)\n",
+    "capital_forecast = capital_forecast[['timestamp', 'zone', 'forecast']]\n",
     "capital_forecast.to_csv('../data/nyiso_dayahead_forecasts/capital_forecast.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This data was copied in raw from weather.gov. It's the Albany 48 hour temperature foreacst that went into the final pdf presentation. "
    ]
   },
   {
@@ -816,7 +557,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -906,15 +647,6 @@
     "start_time = pd.to_datetime('2016-03-28')\n",
     "[range(1,73)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
